# sockchat

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: TODO.txt  networking.docx  oracle_linux_install.sh  report.docx
sockchat/: __main__.py  colors.py  common.py  loggers.py  scratchpad.py  ui_provider.py  util.py
sockchat/network/: client.py  message.py  message_channel.py  server.py
tests/: test1.py  test2.py
